# shimira

./: .gitignore  README.md  pyproject.toml  requirements.txt
shimira/nlp/: embedding.py
shimira/plot/: tsne.py
shimira/speech/: constant.py
shimira/speech/acoustic_feat/: __init__.py
shimira/speech/io/: __init__.py
shimira/speech/objeval/: MOS.py  SpeakerSimilarity.py  __init__.py
shimira/speech/util/: __init__.py
