[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shimira"
version = "2024.9.20a1"
dependencies = [
    "praat-parselmouth@git+https://github.com/shoma-knot/Parselmouth.git",
    "pyworld@git+https://github.com/shoma-knot/Python-Wrapper-for-World-Vocoder.git",
    "sentence-transformers",
    "matplotlib",
    "scikit-learn",
    "resemblyzer",
    "numpy"
]